# PMO

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  routes.py
backend/app/core/: config.py
backend/app/models/: entities.py
backend/app/schemas/: common.py
backend/app/services/: ai.py  auth.py  dashboard.py  notifications.py
backend/tests/: test_api.py
docs/: API.md
frontend/: index.html  package.json
frontend/src/: main.jsx
frontend/src/components/: KpiCard.jsx
frontend/src/pages/: Dashboard.jsx
frontend/src/services/: api.js
