[project]
name = "vigorousone-pmo-backend"
version = "0.1.0"
description = "AI PMO orchestration backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.31.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "alembic>=1.13.3",
  "python-multipart>=0.0.12",
  "email-validator>=2.2.0",
  "passlib[bcrypt]>=1.7.4",
  "pyjwt>=2.10.1",
  "httpx>=0.27.2",
  "python-docx>=1.1.2",
  "pypdf>=5.0.1",
  "tenacity>=9.0.0",
  "pgvector>=0.3.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.pytest.ini_options]
pythonpath = ["app"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
